fix background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3072,6 +3072,10 @@ input, select, textarea {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
 
+		.spotlights > section:nth-child(5) {
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+
 		.spotlights > section.inactive > .image:before,
 		body.is-preload .spotlights > section > .image:before {
 			opacity: 1;
