--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3924,6 +3924,10 @@ input, select, textarea {
 	max-width: 500px;
 	width: 100%;
 	padding-right: 4em;
+	justify-content: center;
+	display: flex;
+	gap: 10px;
+	flex-direction: column;
 }
 
 #profile-pic {
@@ -4064,4 +4068,9 @@ input, select, textarea {
 	.other-projects {
 		flex-direction: column;
 	}
+}
+
+.pic-desc {
+	text-align: center;
+	font-size: 10px;
 }
