--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3235,6 +3235,9 @@ input, select, textarea {
 			@media screen and (max-width: 736px) {
 
 				.wrapper > .inner {
+					padding: 3em 2em 1em 2em ;
+				}
+				.wrapper > .inner#landing {
 					padding: 3em 2em 1em 4em ;
 					padding-right: unset;
 				}
