--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4085,3 +4085,19 @@ input, select, textarea {
 	text-align: center;
 	font-size: 10px;
 }
+
+.gif-grid {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+@media screen and (min-width: 540px) {
+.gif-grid {
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-gap: 10px;
+		margin-bottom: 60px;
+	}
+}
