--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3136,6 +3136,12 @@ input, select, textarea {
 
 		}
 
+@media screen and (max-width: 500px) {
+	.spotlights>section>.image {
+		height: 30vh;
+	}
+}
+
 /* Table */
 
 	.table-wrapper {
@@ -4147,4 +4153,15 @@ section.row-icon h3, .linkedin-row h3 {
 	display: flex;
 	align-items: center;
 	gap: 10px;
+}
+
+.ds-button {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.ds-button > .memo-text{
+	font-size: 12px;
+	margin-bottom: 10px;
 }
