--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4181,3 +4181,7 @@ section.row-icon h3, .linkedin-row h3 {
 	max-width: 100%;
 	border-radius: 0.25em;
 }
+
+.grandfolia {
+	margin-bottom: 40px;
+}
