--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3760,7 +3760,7 @@ input, select, textarea {
 			border: 0;
 			color: rgba(255, 255, 255, 0.35);
 			display: block;
-			font-size: 0.6em;
+			font-size: 0.6rem;
 			font-weight: bold;
 			letter-spacing: 0.25em;
 			line-height: 1.75;
